--- a/.htaccess
+++ b/.htaccess
@@ -76,5 +76,6 @@ RewriteRule ^es/info-del-destino/$ 					/arriving-to-the-villa-playacar-playa-de
 RewriteRule ^es/cultura/$ 							/out-and-about-dining-culture-shopping.php?lang=es
 RewriteRule ^es/proceso-de-reserva/$ 				/reservation-rental-rates-and-process.php?lang=es
 RewriteRule ^es/reglas-y-politicas-de-la-villa/$ 			/villa-rules-and-policies.php?lang=es
+RewriteRule ^es/galeria/$ 								/gallery.php?lang=es
 
 
